# Aios

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
.claude/: settings.json
.github/workflows/: ci.yml
ai-core/: pyproject.toml
ai-core/aiosd/: __init__.py  __main__.py  agent.py  assistant.py  audit.py  backends.py  config.py  context.py  doctor.py  embeddings.py  indexer.py  notifications.py  packages.py  retriever.py  schedule.py  server.py  session.py  statusline.py  storage.py  store.py  tools.py  transport.py  ui.py  update.py
ai-core/aiosd/platform/: __init__.py  posix.py  services.py
ai-core/tests/: test_agent.py  test_api.py  test_api_contract.py  test_assistant.py  test_audit.py  test_backends.py  test_config.py  test_doctor.py  test_embeddings.py  test_indexer.py  test_mutations.py  test_notifications.py  test_packages.py  test_packaging.py  test_platform.py  test_rag.py  test_schedule.py  test_server.py  test_services.py  test_session.py  test_statusline.py  test_storage.py  test_store.py  test_streaming.py  test_tools.py  test_transport.py  test_ui.py  test_update.py
docs/: BACKLOG.md  architecture.md  asahi-bringup.md  config.example.toml
docs/architecture/: 00-engineering-constitution.md  01-layered-architecture.md  03-kernel-design.md  README.md  (+2 more)
examples/: README.md  briefing.py  notes_qa.py  quick_ask.py
scripts/: asahi-bringup.sh  install.sh  uninstall.sh
sdk/: README.md  pyproject.toml
sdk/aios_sdk/: __init__.py  client.py  errors.py  models.py
sdk/tests/: test_cli.py  test_client.py  test_examples.py
(+22 files in other folders)
