[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aios-sdk"
version = "0.1.0"
description = "Zero-dependency Python client for the AIOS Platform API v1."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AIOS contributors" }]
keywords = ["aios", "ai", "sdk", "client", "assistant"]
dependencies = []  # standard library only, by design

[tool.setuptools]
packages = ["aios_sdk"]
